Fix stretched social buttons

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -65,7 +65,7 @@ header .navbar.animate {
 .tooltip-inner {
     line-height: 1rem;
 }
-.tooltip .tooltip-arrow { 
+.tooltip .tooltip-arrow {
     visibility: hidden !important;
 }
 
@@ -133,12 +133,9 @@ header .navbar.animate {
 
 #hero a.btn.social-icon {
     color: var(--primary-color) !important;
-    line-height: 0%;
     border-radius: 50%;
-    margin-top: 50px;
     padding: 0.7rem;
-    border: 1px solid var(--primary-color);
-    transition: none;
+    width: 3rem;
 }
 
 #hero a.btn.social-icon img {
@@ -298,7 +295,7 @@ header .navbar.animate {
 
 #experience .nav-item .nav-link {
     color: var(--text-color) !important;
-    border-bottom: 2px solid transparent; 
+    border-bottom: 2px solid transparent;
     border-radius: 0%;
     transition: none;
     cursor: pointer;
@@ -306,11 +303,11 @@ header .navbar.animate {
 
 #experience .nav-item .nav-link.active {
     color: var(--text-color) !important;
-    border-bottom: 2px solid var(--primary-color); 
+    border-bottom: 2px solid var(--primary-color);
     opacity: 0.8;
 }
 
-#experience .nav-item .nav-link.active:hover { 
+#experience .nav-item .nav-link.active:hover {
     transition: none !important;
 }
 
